# orange-kit

./: .gitignore  pyproject.toml  test  test.py
src/orange/: __init__.py  __version__.py  config.py  docx.py  excel.py  mail.py  sqlite.py  table.py  word.py  xlsx.py
src/orange/pykit/: __init__.py  pipconf.py  pypkgs.py  pysetup.py  pyver.py  sql.py
src/orange/shell/: __init__.py  path.py  shell.py
src/orange/tools/: dvd.py  gclone.py  gk.py  imgbackup.py  init.py  pack.py  sudoke.py
src/orange/utils/: __init__.py  checksum.py  click.py  data.py  datetime_.py  debug.py  hclient.py  http.py  htutil.py  log.py  music.py  musictag.py  pinyin.py  printf.py  regex.py
src/orange/xlwt/: __init__.py  xlwt.py
