[project]
name = "orange_kit"
description = "标准库函数"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "huangtao", email = "huangtao.sh@icloud.com" }]
dependencies = [
  "beautifulsoup4",
  "lxml",
  "pypinyin",
  "python-docx>=1.1.2",
  "requests",
  "toml",
  "xlrd3",
  "xlsxwriter>=3.2.2",
]
dynamic = ["version"]

[project.scripts]
cleanwork = "orange.shell.path:clean_trash"
gclone = "orange.tools.gclone:proc"
mconf = "orange.mail:config_mail"  # 配置邮箱服务器
pack = "orange.tools.pack:main"
pkg = "orange.pykit.pypkgs:main"
pyclean = "orange.pykit.pysetup:pyclean"
pyupload = "orange.pykit.pysetup:pyupload"
pyver = "orange.pykit.pyver:VersionMgr.main"
sql = "orange.pykit.sql:execsql"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "orange.__version__.version" }
